--- a/Ecu911/appsettings.json
+++ b/Ecu911/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost; Database=Matriz; Username=postgres; Password=12345"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
