--- a/Ecu911/appsettings.json
+++ b/Ecu911/appsettings.json
@@ -11,5 +11,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiSetting": {
+
+    "usuario": "admin",
+    "clave": "123",
+    "baseUrl": "https://localhost:7167/swagger/"
+
+  },
+  "ApiUrl": "https://localhost:7167/swagger/index.html"
 }
