--- a/Ecu911/appsettings.json
+++ b/Ecu911/appsettings.json
@@ -12,12 +12,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiSetting": {
+  //"ApiSetting": {
 
-    "usuario": "admin",
-    "clave": "123",
-    "baseUrl": "https://localhost:7167/swagger/"
+  //  "usuario": "admin",
+  //  "clave": "123",
+  //  "baseUrl": "https://localhost:7167/swagger/"
 
-  },
-  "ApiUrl": "https://localhost:7167/swagger/index.html"
+  //},
+  "ApiUrl": "http://localhost:7167/api/"
 }
