Ya funciona la apiii

--- a/Ecu911/appsettings.json
+++ b/Ecu911/appsettings.json
@@ -16,8 +16,8 @@
 
   //  "usuario": "admin",
   //  "clave": "123",
-  //  "baseUrl": "https://localhost:7167/swagger/"
+  //  "baseUrl": "https://localhost:7167/swagger/swagger/"
 
   //},
-  "ApiUrl": "http://localhost:7167/api/"
+  "ApiUrl": "https://localhost:7167/swagger/index.html"
 }
