--- a/Ecu911/appsettings.json
+++ b/Ecu911/appsettings.json
@@ -12,12 +12,8 @@
     }
   },
   "AllowedHosts": "*",
-  //"ApiSetting": {
-
-  //  "usuario": "admin",
-  //  "clave": "123",
-  //  "baseUrl": "https://localhost:7167/swagger/swagger/"
-
-  //},
-  "ApiUrl": "https://localhost:7167/swagger/index.html"
+  "JwtTokenConfig": {
+    "signingKey": "superSecretttttt"
+  },
+  "ApiUrl": "http://localhost:5167/api/"
 }
