--- a/Ecu911/appsettings.json
+++ b/Ecu911/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Database=MatrizPlanificacion; Username=postgres; Password=12345"
+    "DefaultConnection": "Host=localhost; Database=Ecu911; Username=postgres; Password=12345"
   },
 
   "Logging": {
