Crear,Etapas, Observaciones, Actualizar(cumple/revisar), usuarios(se crea objeto  todo pero no se graba)

--- a/Ecu911/Ecu911.csproj
+++ b/Ecu911/Ecu911.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Modelos\RegistroUsers.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
     <PackageReference Include="Blazored.SessionStorage" Version="2.2.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
